Revert "change CV to Resume"
This reverts commit bad42be05e811bb76cca52a850d6ab3c89541c9b.

--- a/Chotirat_Resume.html
+++ b/Chotirat_Resume.html
@@ -294,7 +294,7 @@
         ></span>
       </p>
       <a href="./CV_Chotirat_EN_2022.pdf" download="CV_Chotirat_EN_2022"
-        ><button class="download-button">Download My Resume</button></a
+        ><button class="download-button">Download My CV</button></a
       >
       <nav>
         <a class="icon-bio" href="#experience"
