change #eec4c4 to var(--red)

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
         font-family: monospace;
         padding: 15px 20px;
         border-radius: 20px;
-        box-shadow: 4px 3px 2px 1px #eec4c4;
-        border: 2px solid #eec4c4;
-        background: #eec4c4;
+        box-shadow: 4px 3px 2px 1px var(--red);
+        border: 2px solid var(--red);
+        background: var(--red);
         margin: 100px auto;
         display: block;
         transition: all 1s ease-out;
       }
       button:hover {
         background: white;
-        color: #eec4c4;
+        color: var(--red);
         cursor: pointer;
       }
       hr {
