--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       * {
         box-sizing: border-box;
       }
+
       :root {
         --red: #f29191;
         --green: #94d0cc;
@@ -162,7 +163,7 @@
       }
 
       .scroll-container {
-        width: 800px;
+        max-width: 800px;
         scroll-behavior: smooth;
         font-family: monospace;
       }
@@ -192,7 +193,7 @@
       }
 
       .txt-rotate {
-        color: #f4a9a8;
+        color: var(--pink);
       }
       .icon-bio {
         margin-left: 10px;
