update portfolio section

--- a/index.html
+++ b/index.html
@@ -198,13 +198,15 @@
       .icon-bio {
         margin-left: 10px;
         margin-right: 40px;
+
       }
+ 
       .date {
         font-weight: lighter;
         color: var(--green);
       }
 
-      .contact-info {
+      /* .contact-info {
         text-align: left;
         font-family: monospace;
         font-size: 20px;
@@ -220,7 +222,7 @@
         text-decoration: none;
         width: 30px;
         text-decoration: none;
-      }
+      } */
       .footer {
         text-align: center;
         font-family: monospace;
@@ -267,8 +269,19 @@
         ><button class="download-button">Download My CV</button></a
       >
       <nav>
-        <a class="icon-bio" href="#experience"
-          ><img src="icon_work.png" alt="experience" width="50px"
+        <a
+            class="icon-bio"
+            href="#portfolio" /><img
+            src="icons-portfolio.png"
+            alt="portfolio"
+            width="60px"
+        /></a>
+        <a
+            class="icon-bio"
+            href="#experience" /><img
+            src="icon_work.png"
+            alt="experience"
+            width="50px"
         /></a>
         <a class="icon-bio" href="#education"
           ><img src="icon_education.png" alt="education" width="50px"
@@ -281,6 +294,12 @@
         /></a>
       </nav>
       <div class="scroll-container">
+          <div class="scroll-page" id="portfolio"><h2>Portfolio</h2></div>
+        <div>
+          <a href="case-converter.html"><h3><img src="font_download.png" alt="font_download" width="50px"
+        />       Case Converter</h3></a>
+         
+        </div>
         <div class="scroll-page" id="experience">
           <h2>Work Experience</h2>
         </div>
@@ -369,11 +388,11 @@
         </div>
         <div class="scroll-page" id="contact"><h2>Contact</h2></div>
         <div>
-          <img class="" src="icon_email.png" alt="email" />
-          <h4 class="">jgchotirat@gmail.com</h4>
+          <img src="icon_email.png" alt="email" />
+          <h4 >jgchotirat@gmail.com</h4>
           <br />
-          <img class="" src="icon_location.png" alt="location"/ >
-          <h4 class="">Based in Antwerp, Belgium</h4>
+          <img  src="icon_location.png" alt="location"/ >
+          <h4 >Based in Antwerp, Belgium</h4>
           <br />
           <a
             class="link-logo"
