--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
       <a href="./CV_Chotirat_EN_2022.pdf" download="CV_Chotirat_EN_2022"
         ><button class="download-button">Download My CV</button></a
       >
+      <!-- icon section -->
       <nav>
         <a class="icon-bio" href="#portfolio">
           <img src="icons-portfolio.png" alt="portfolio" width="60px" />
@@ -289,7 +290,10 @@
           ><img src="icon_contact.png" alt="contact" width="50px"
         /></a>
       </nav>
+      <!-- End of icon section -->
+
       <div class="scroll-container">
+        <!-- portfolio section -->
         <div class="scroll-page" id="portfolio"><h2>Portfolio</h2></div>
         <div>
           <a href="case-converter.html">
@@ -304,6 +308,8 @@
             </h3>
           </a>
         </div>
+        <!-- End of portfolio section -->
+        <!-- experience section -->
         <div class="scroll-page" id="experience">
           <h2>Work Experience</h2>
         </div>
@@ -384,12 +390,18 @@
             <h4>Finance (Major) and Real Estates Management (Minor)</h4>
           </article>
         </div>
+        <!-- end of experience section -->
+
+        <!-- language section -->
         <div class="scroll-page" id="language"><h2>Language</h2></div>
         <div>
           <h3>Thai (native)</h3>
           <h3>English (fluent)</h3>
           <h3>Dutch (learning)</h3>
         </div>
+        <!-- end of language section -->
+
+        <!-- contact section -->
         <div class="scroll-page" id="contact"><h2>Contact</h2></div>
         <div>
           <img src="icon_email.png" alt="email" />
@@ -422,7 +434,9 @@
               height="40px"
             />
           </a>
+          <!-- end of contact section -->
           <br />
+          <!-- form section -->
           <h3>or leave me a message ...</h3>
           <article>
             <div class="contact-container">
@@ -448,6 +462,7 @@
             </div>
           </article>
         </div>
+        <!-- end of form section -->
       </div>
       <span class="footer"> 👩🏾‍💻 This page was built By Choti J. © 2022 </span>
     </div>
