--- a/index.html
+++ b/index.html
@@ -63,15 +63,26 @@
         <!-- portfolio section -->
         <div class="scroll-page" id="portfolio"><h2>Portfolio</h2></div>
         <div>
-          <a href="case-converter.html">
+          <a href="https://try-case-converter.netlify.app/" target="_blank">
             <h3 class="portfolio__item">
               <img
-                src="icon/font_download.png"
+                src="icon/icon_font.png"
                 alt="font_download"
                 width="50px"
                 height="50px"
               />
               Case Converter
+            </h3>
+          </a>
+          <a href="https://weather2023.netlify.app/" target="_blank">
+            <h3 class="portfolio__item">
+              <img
+                src="icon/icon_weather.png"
+                alt="font_download"
+                width="50px"
+                height="50px"
+              />
+              Weather App
             </h3>
           </a>
         </div>
