--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           data-rotate='[ "Choti.", "Thai.", "living in Belgium.", "learning to code."]'
         ></span>
       </p>
-      <a href="doc/CV_Chotirat_EN_2023.pdf" download="CV_Chotirat_EN_2023"
+      <a href="doc/CV_Chotirat_EN_IT_2024.pdf" download="CV_Chotirat_EN_2023"
         ><button class="download-button">Download My CV</button></a
       >
       <!-- icon section -->
